--- a/index.html
+++ b/index.html
@@ -2,12 +2,43 @@
 <head>
     <meta charset="UTF-8">
        <title>Raquim's Personal Site</title>
+
+<style>
+    /*body{
+        background-color: #ccf0e9;
+    }
+
+    hr{
+        background-color: #ccf0e9;
+        border-style: dotted none none;
+        border-color: gray;
+        border-width: 5px;
+        width: 5%;
+    }
+    table{
+        text-align:center;
+    }*/
+    body{
+            color: azure;
+            background-color: rgb(13, 75, 69);
+        }
+        a{
+            color: azure;
+        }
+        hr{
+            background-color: rgb(13, 75, 69);
+            border-style: dotted none none;
+            border-color: gray;
+            border-width: 5px;
+            width: 5%;
+        }
+</style>
 </head>
 <body>
     <table cellspacing="20px">
         <tr>
-            <td><img src="Images/profile pic.png" alt="Syed's profile picture" height="150px" width="auto"></td>
-            <td> <h1><a href="https://www.linkedin.com/in/sayed-raquim-b28a1520b/">Syed Raquim Hussain Naqvi</a></h1>
+            <td><img src="/work\Personal site\profile pic.png" alt="Syed's profile picture" height="150px" width="auto"></td>
+            <td> <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://www.linkedin.com/in/sayed-raquim-b28a1520b/">Syed Raquim Hussain Naqvi</a></h1>
                 <p><em>Student at <strong><a href="https://www.bvuniversity.edu.in/"> Bharti Vidyapeeth Department of Management studies</a></strong>.</em></p>
                 <br>
                 <p>Currently i am persuing BCA 2nd Year and focusing on learning some new skills</p></td>
@@ -44,7 +75,7 @@
     </ol>
     <hr>
     <h3>Skills</h3>
-    <table border="2">
+    <table cellspacing="20px">
         <tr>
             <th>Language</th>
             <th>Ratings</th>
