--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <table cellspacing="20px">
         <tr>
-            <td><img src="/work\Personal site\profile pic.png" alt="Syed's profile picture" height="150px" width="auto"></td>
+            <td><img src="Images/profile pic.png" alt="Syed's profile picture" height="150px" width="auto"></td>
             <td> <h1 style="font-family: Georgia, 'Times New Roman', Times, serif;"><a href="https://www.linkedin.com/in/sayed-raquim-b28a1520b/">Syed Raquim Hussain Naqvi</a></h1>
                 <p><em>Student at <strong><a href="https://www.bvuniversity.edu.in/"> Bharti Vidyapeeth Department of Management studies</a></strong>.</em></p>
                 <br>
